--- a/TrafficLights/TrafficLights/App.xaml
+++ b/TrafficLights/TrafficLights/App.xaml
@@ -131,7 +131,31 @@
                 </Setter.Value>
             </Setter>
         </Style>
-        
+
+        <Style x:Key="WindowPopupCustomStyle" TargetType="{x:Type Window}">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Window}">
+                        <Border x:Name="WindowBorderCustom" MouseDown="WindowBorderCustom_MouseDown" BorderBrush="Black" BorderThickness="5">
+                            <Border.Effect>
+                                <DropShadowEffect />
+                            </Border.Effect>
+                            <Grid>
+                            <Border x:Name="MainBorder"  BorderThickness="1" Background="#FF34495e" >
+                                <DockPanel LastChildFill="True">
+       
+
+                                    <AdornerDecorator DockPanel.Dock="Bottom">
+                                        <ContentPresenter ContentTemplate="{TemplateBinding ContentTemplate}" Content="{TemplateBinding Content}" ContentStringFormat="{TemplateBinding ContentStringFormat}"/>
+                                    </AdornerDecorator>
+                                </DockPanel>
+                            </Border>
+                        </Grid>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
 
 
     </Application.Resources>
